# tetris

app/: bun.lockb  package.json  svelte.config.js  vite.config.ts
app/src/: app.css  server.js
app/src/components/: MessageContainer.svelte  TetrisContainer.svelte
app/src/lib/: util.ts
app/src/lib/socket/: connection.ts  handler.ts  plugin.ts
app/src/routes/: +error.svelte  +layout.svelte  +page.svelte
app/src/routes/play/: +page.svelte
app/static/: .gitignore
core/: Cargo.toml
core_heart/: .gitignore  Cargo.toml
core_heart/src/: game.rs  lib.rs  tests.rs  tetromino.rs
