[package]
name = "core_heart"
version = "0.1.0"
authors = ["Rakemoon <rakemoonkuzmin@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/CreateMoon/tetris"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] } 
js-sys = "0.3.70"
wasm-bindgen = "=0.2.93"
